added task edit form

--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -16,11 +16,11 @@
 }
 
 button {
-  background-color: transparent;
+  background-color:#FFD2D2;
   border: none;
   cursor: pointer;
   font-size: 16px;
-  color: white;
+  color: #fa405c;
   margin-left: 20px;
 }
 
