--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #0f0f0f;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -57,7 +57,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #983362;
     background-color: #ffffff;
   }
   a:hover {
