--- a/src/Styles/TaskEditForm.css
+++ b/src/Styles/TaskEditForm.css
@@ -1,23 +1,46 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
 .Edit {
-    max-width: 500px;
-    margin: auto;
-    margin-top: 200px;
-    padding: 20px;
-    border: 5px solid #a85757;
-    border-radius: 8px;
-  }
-  
-button {
-    grid-column: span 2; 
-    background-color: rgb(162, 76, 175);
-    color: #fa405c;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-button:hover {
-    background-color: #FFD2D2;
-  }
-  
+  background-color: rgba(255, 210, 210, 0.5);
+  box-shadow: 0 0 15px 0 #a85757;
+  padding: 20px 100px;
+  width: 100%; 
+  max-width: 600px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  color: rgb(124, 39, 53);
+  gap: 5px;
+  margin-top: 100px; 
+  z-index: 1;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+}
+
+.input-group input {
+  font-size: 1.1rem;
+  padding: .2em;
+  background-color: rgba(255, 230, 230, 0.952);
+  border: none;
+  outline: none;
+  border-radius: .15em; 
+}
+
+.input-group input:focus {
+ box-shadow: 0 0 15px 0 #a85757;
+}
