--- a/src/Styles/TaskNewForm.css
+++ b/src/Styles/TaskNewForm.css
@@ -1,43 +1,46 @@
-.NewFormContainer {
-    max-width: 900px;
-    margin: auto;
-    margin-top: 200px;
-    padding: 20px;
-    border: 5px solid #a85757;
-    border-radius: 8px;
-  }
-  
-  form {
-    display: grid;
-    grid-template-columns: 1fr 2fr; 
-    grid-gap: 1px; 
-  }
-  
-  label {
-    font-weight: bold;
-    text-align: right;
-    padding-right:10px;
-    line-height: 5px; 
-  }
-  
-  input {
-    width: 100%;
-    padding: 8px;
+*, *::before, *::after {
     box-sizing: border-box;
-    margin-bottom: 10px;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
-  button {
-    grid-column: span 2; 
-    background-color: rgb(162, 76, 175);
-    color: #fa405c;
-    padding: 10px 15px;
+  body {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+  }
+  
+  .NewFormContainer {
+    background-color: rgba(255, 210, 210, 0.5);
+    box-shadow: 0 0 15px 0 #a85757;
+    padding: 20px 100px;
+    width: 100%; 
+    max-width: 600px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    color: rgb(124, 39, 53);
+    gap: 5px;
+    margin-top: 200px; 
+    z-index: 1;
+  }
+  
+  .input-group {
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+  }
+  
+  .input-group input {
+    font-size: 1.1rem;
+    padding: .2em;
+    background-color: rgba(255, 230, 230, 0.952);
     border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    outline: none;
+    border-radius: .15em; 
   }
-  
-  button:hover {
-    background-color: #FFD2D2;
+
+  .input-group input:focus {
+   box-shadow: 0 0 15px 0 #a85757;
   }
-  
